baml_language/crates/baml_lsp2_actions/src/snapshots/baml_lsp2_actions__project_search_tests__enum_symbol_search.snap
---
source: crates/baml_lsp2_actions/src/project_search_tests.rs
assertion_line: 135
expression: output
---
enum Color  types.baml:7
shape: enum Color {
    Red
    Green
    Blue
}
refs: 1
  funcs.baml:6  function ReadColor(c: Color) -> string {
