baml_language/crates/baml_lsp2_actions/src/snapshots/baml_lsp2_actions__project_search_tests__semantic_result_snapshot.snap
---
source: crates/baml_lsp2_actions/src/project_search_tests.rs
expression: output
---
class Point  types.baml:2
shape: class Point {
    x: int,
    y: int,
}
refs: 2
  funcs.baml:2  function MakePoint(x: int, y: int) -> Point {
  funcs.baml:3  return Point { x: x, y: y };
