baml_language/crates/baml_lsp2_actions/src/snapshots/baml_lsp2_actions__project_search_tests__text_search_with_matches.snap
---
source: crates/baml_lsp2_actions/src/project_search_tests.rs
expression: output
---
funcs.baml:3│ return Point { x: x, y: y };
